fixed overflow for sticky navbar

--- a/#source/style.scss
+++ b/#source/style.scss
@@ -10,6 +10,9 @@ body {
 	display: flex;
 	flex-direction: column;
 }
+.main {
+	overflow: visible;
+}
 .header {
 	padding: 0 20px;
 	text-align: center;
